[package]
name = "ssh-alert"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.11"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde_json = "1.0.91"
lettre = "0.10.1"
lettre_email = "0.9.4"
chrono = "0.4.23"
serde_yaml = "0.9.16"